Formalizes scripts and adds basic Readme.

--- a/.env_template
+++ b/.env_template
@@ -1,6 +1,7 @@
 NEO4J_USERNAME=neo4j
 NEO4J_PASSWORD=mycoolpassword
-NEO4J_HOST=argus-neo4j.argus.svc.cluster.local
-NEO4J_PORT=
+NEO4J_HOST=0.0.0.0
+NEO4J_PORT=7687
 DISCORD_TOKEN=
 DISCORD_GUILD=
+OPENAI_KEY=
