--- a/config/neo4j/values.yml
+++ b/config/neo4j/values.yml
@@ -2,18 +2,29 @@
 neo4j:
   name: argus-gdb
   resources:
-    cpu: "0.5"
-    memory: "2Gi"
+    cpu: "4"
+    memory: "4Gi"
 volumes:
   data:
     mode: defaultStorageClass
     defaultStorageClass:
       requests:
         storage: 2Gi
+  import:
+    mode: defaultStorageClass
+    defaultStorageClass:
+      accessModes:
+        - ReadWriteOnce
+      requests:
+        storage: 1Gi
 existingPasswordSecret: "argus-secrets"
 existingPasswordSecretKey: "NEO4J_PASSWORD"
 auth:
   enabled: true
-  adminUser: neo4j  # This could be customized
-  adminPasswordSecret: "neo4j-secrets"
-  adminPasswordKey: "NEO4J_PASSWORD"
+service:
+  type: LoadBalancer
+persistentVolumes:
+  logs:
+    enabled: true
+    mountPath: /mnt/argus
+    hostPath: /mnt/argus
