Troubleshooting passwordFromSecret on Mac.

--- a/config/neo4j/values.yml
+++ b/config/neo4j/values.yml
@@ -27,3 +27,5 @@ persistentVolumes:
     enabled: true
     mountPath: /mnt/argus
     hostPath: /mnt/argus
+existingPasswordSecret: "argus-secrets"	
+existingPasswordSecretKey: "NEO4J_PASSWORD"
