--- a/config/neo4j/values.yml
+++ b/config/neo4j/values.yml
@@ -1,10 +1,10 @@
 # neo4j-values.yaml
 neo4j:
   name: argus-gdb
-  passwordFromSecret: "argus-secrets"
+  password: mycoolpassword
   resources:
-    cpu: "4"
-    memory: "4Gi"
+    cpu: "6"
+    memory: "2Gi"
 volumes:
   data:
     mode: defaultStorageClass
@@ -29,3 +29,16 @@ persistentVolumes:
     hostPath: /mnt/argus
 existingPasswordSecret: "argus-secrets"	
 existingPasswordSecretKey: "NEO4J_PASSWORD"
+config:
+  dbms.directories.plugins: "/plugins"
+  dbms.security.procedures.unrestricted: "apoc.cypher.*"
+  dbms.security.procedures.allowList: "apoc.*"
+  server.directories.plugins: "/var/lib/neo4j/labs"
+  server.config.strict_validation.enabled: "false"
+env:
+  NEO4J_PLUGINS: '["apoc"]'
+dbms:
+  memory:
+    heap:
+      initial_size: 2048m
+      max_size: 2048m
